--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>formularios</title>
     <link rel="stylesheet" href="css/style.css">
+    <javascript language="javascript" tipe="text/javascript" src="js/validacion.js" > </javascript>
 </head>
 <body>
     <p>Formulario de Registro Básico</p>
