--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>formularios</title>
     <link rel="stylesheet" href="css/style.css">
-    <javascript language="javascript" tipe="text/javascript" src="js/validacion.js" > </javascript>
+    <script language="javascript" type="text/javascript" src="js/validacion.js" > </script>
 </head>
 <body>
     <p>Formulario de Registro Básico</p>
@@ -15,6 +15,11 @@
         Nombre: <input type="text" name="nombre" size="20" >
         <br>
         Edad: <input type="number" min="00" max="99" name="edad" >
+        <br>
+       
+        Dia: <input type="number"  size="2" name="dia" >
+        Mes: <input type="number" name="mes"  size="2" >
+        Año: <input type="number" name="año"  size="4" >
         <br>
         Email: <input type="email" name="correo" size="30">
         <br>
