calcule de la edad de una persona

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         <br>
         Email: <input type="email" name="correo" size="30">
         <br>
+        <input type="submit" value="hombresymujeres" name="hm">
+        <input type="submit"value = "calcularedad" name = "calcularedad">
         <input type="submit" value="Enviar Datos" name="enviar">
         <input type="reset" value="Borrar Datos" name="borrar" >
     </form>
