--- a/index.html
+++ b/index.html
@@ -23,11 +23,14 @@
         <br>
         Email: <input type="email" name="correo" size="30">
         <br>
-        <input type="submit" value="hombresymujeres" name="hm">
-        <input type="submit"value = "calcularedad" name = "calcularedad">
+        
         <input type="submit" value="Enviar Datos" name="enviar">
         <input type="reset" value="Borrar Datos" name="borrar" >
     </form>
+    <form action="" method="get" name="formulario2" onsubmit="return calcularedad(this)" >
+    <input type="submit" value="hombresymujeres" name="hm">
     
+    <input type="submit"value = "calcularedad" name = "calcularedad">
+    </form>
 </body>
 </html>
