--- a/index.html
+++ b/index.html
@@ -27,10 +27,9 @@
         <input type="submit" value="Enviar Datos" name="enviar">
         <input type="reset" value="Borrar Datos" name="borrar" >
     </form>
-    <form action="" method="get" name="formulario2" onsubmit="return calcularedad(this)" >
-    <input type="submit" value="hombresymujeres" name="hm">
-    
-    <input type="submit"value = "calcularedad" name = "calcularedad">
-    </form>
+    <a href="calcularedad.html">quiere calcular su edad</a>
+    <br>
+    <a href="calcularhombresymujeres.html">saber el numero de hombres y mujeres en un grupo</a>
+   
 </body>
 </html>
