--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
     <a href="calcularedad.html">quiere calcular su edad</a>
     <br>
     <a href="calcularhombresymujeres.html">saber el numero de hombres y mujeres en un grupo</a>
-   
+   <button onclick="porcentaje()"></button>
 </body>
 </html>
